.aws/cf/vpc.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: A template for setting up a VPC with 2 private and 2 public subnets
Parameters:
  ProjectName:
    Description: The name of the project
    Type: String
Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: "10.10.0.0/16"
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: Product
          Value: !Sub '${ProjectName}'
        - Key: Name
          Value: !Sub '${AWS::StackName}-VPC'

  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Product
          Value: !Sub '${ProjectName}'

  GatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref InternetGateway
      VpcId: !Ref VPC


  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-south-1a
      CidrBlock: "10.10.0.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Product
          Value: !Sub '${ProjectName}'
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnet1'

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-south-1b
      CidrBlock: "10.10.1.0/24"
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Product
          Value: !Sub '${ProjectName}'
        - Key: Name
          Value: !Sub '${AWS::StackName}-PublicSubnet2'

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      AvailabilityZone: ap-south-1a
      CidrBlock: "10.10.10.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Product
          Value: !Sub '${ProjectName}'
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnet1'

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: ap-south-1b
      VpcId: !Ref VPC
      CidrBlock: "10.10.11.0/24"
      MapPublicIpOnLaunch: false
      Tags:
        - Key: Product
          Value: !Sub '${ProjectName}'
        - Key: Name
          Value: !Sub '${AWS::StackName}-PrivateSubnet2'


  PublicSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PrivateSubnetRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicSubnetRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  PublicSubnetAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnetAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicSubnetRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateSubnetAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnetAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateSubnetRouteTable
      SubnetId: !Ref PrivateSubnet2

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group Enabling outside Access from the internet
      GroupName: !Sub '${AWS::StackName}-Public'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
        - IpProtocol: icmp
          FromPort: -1
          ToPort: -1
          CidrIp: "0.0.0.0/0" 

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Security Group enabling private access only
      GroupName: !Sub '${AWS::StackName}-Private'
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          SourceSecurityGroupId: !Ref PublicSecurityGroup
      SecurityGroupEgress:
        - IpProtocol: tcp
          FromPort: 1
          ToPort: 1
          CidrIp: 0.0.0.0/32

Outputs:
  VpcId:
    Description: The ID of the VPC
    Value: !Ref VPC
  PublicSecurityGroup:
    Description: The Public Security Group for Public Subnets
    Value: !Ref PublicSecurityGroup
  PrivateSubnet1:
    Description: The ID of the PrivateSubnet1
    Value: !Ref PrivateSubnet1
  PrivateSubnet2:
    Description: The ID of the PrivateSubnet2
    Value: !Ref PrivateSubnet2
  PublicSubnet1:
    Description: The ID of the PublicSubnet1
    Value: !Ref PublicSubnet1
  PublicSubnet2:
    Description: The ID of the PublicSubnet2
    Value: !Ref PublicSubnet2
